--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
       crossorigin="anonymous"
     />
-    <title>React Redux App</title>
+    <title>Toothsi Work</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
